@@ -99,6 +99,9 @@ HARFBUZZ_VER=
 FREETYPE_VER=2.4.2
 FONTCONFIG_VER=2.8.0
 
+SQLITE_VER=3.6.16
+SQLITE_FOSSIL_VER=ff691a6b
+
 
 ### Developer libraries ###
 PROTOBUF_VER=3.2.0
