@@ -98,6 +98,9 @@ HARFBUZZ_VER=
 FREETYPE_VER=2.4.9
 FONTCONFIG_VER=2.9.0
 
+SQLITE_VER=3.7.13
+SQLITE_FOSSIL_VER=f5b5a13f
+
 
 ### Developer libraries ###
 PROTOBUF_VER=3.2.0
