@@ -98,6 +98,9 @@ HARFBUZZ_VER=0.9.28
 FREETYPE_VER=2.5.3
 FONTCONFIG_VER=2.11.0
 
+SQLITE_VER=3.7.13
+SQLITE_FOSSIL_VER=f5b5a13f
+
 
 ### Developer libraries ###
 PROTOBUF_VER=3.2.0
