@@ -102,6 +102,9 @@ OPENSSL_SUBVER=${OPENSSL_VER}
 FREETYPE_VER=2.5.0
 FONTCONFIG_VER=2.11.0
 
+SQLITE_VER=3.8.2
+SQLITE_FOSSIL_VER=27392118
+
 
 ### Developer libraries ###
 PROTOBUF_VER=3.2.0
