@@ -106,6 +106,9 @@ OPENSSL_SUBVER=${OPENSSL_VER}
 FREETYPE_VER=2.7.1
 FONTCONFIG_VER=2.12.1
 
+SQLITE_VER=3.17.0
+SQLITE_FOSSIL_VER=ada05cfa
+
 
 ### Developer libraries ###
 PROTOBUF_VER=3.2.0
